[tool.poetry]
name = "python-poeditor-typed"
version = "1.1.2"
description = "Client Interface for POEditor API (https://poeditor.com)"
authors = ["Leon Smith <_@leonmarksmith.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
isort = "^5.10.1"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
